# 2025-Event-Booking-FastAPI-Application

./: .gitignore  README.md  database.py  main.py  model.py  requirements.txt  schema.py
booking-fastapi-backend/: .editorconfig  .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  database.py  dev.bat  docker-compose.yml  main.py  model.py  pyproject.toml  schema.py
booking-fastapi-backend/app/: main.py
booking-fastapi-backend/app/core/: security.py
booking-fastapi-backend/app/models/: models.py
booking-fastapi-backend/app/schemas/: booking.py  user.py
booking-fastapi-backend/docs/: API_ENDPOINTS.md  COMPLETION_REPORT.md  INDEX.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md
booking-fastapi-backend/utils/: security.py
utils/: security.py
